--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@picocss/pico": "^2.0.6",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
